@@ -1,3 +1,8 @@
+2017-07-28  Martin Liska  <mliska@suse.cz>
+
+	PR sanitizer/81460
+	* gcc.dg/asan/pr81460.c: New test.
+
 2017-07-28  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/81578
